# OnCallEnv

./: .gitignore  CHANGELOG.md  CONTEXT.md  DECISIONS.md  INSTRUCTIONS.md  README.md  TASKS.md  inference.py  openenv.yaml  pyproject.toml
data/: alert_templates.yaml  service_graph.yaml
data/scenarios/: bad_deploy.yaml  cert_expiry.yaml  config_change.yaml  db_failover.yaml  dependency_outage.yaml  dns_misconfig.yaml  memory_leak.yaml  traffic_spike.yaml
env/: __init__.py  env.py  generator.py  grader.py  models.py  reward.py  types.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  oncall_environment.py
tests/: conftest.py  test_data_integrity.py  test_env_lifecycle.py  test_investigate_accounting.py  test_models.py  test_openenv_schema.py  test_reward_and_grader_edges.py  test_reward_shaping.py  test_server_wrapper.py  test_task1_generator.py  test_task1_grader.py  test_task2_fallback_behavior.py  test_task2_generator.py  test_task2_grader.py  test_task3_generator.py  test_task3_grader.py
